--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -1,19 +1,27 @@
 ---
+import Link from '@components/Link.astro'
 import PageLayout from '@layouts/PageLayout.astro'
 ---
 
-<PageLayout title="whoami">
+<PageLayout title="whoami" class="flex flex-col gap-4">
+	<h2>~$: cat bio.txt</h2>
+
 	<p>My name is Giulia, but you can call me Gihu, or Syntologist, or however you like.</p>
-	<br />
 	<p>
 		My dad gave me a laptop running some Linux distro back in middle school, and ever since, I couldn't stop loving
 		computers.
 	</p>
-	<br />
+	<img src="/pic1.jpeg" alt="A picture of myself using the computer" class="my-4 border border-white" />
 	<p>
 		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021,
 		experienced with Linux environments and Kali Linux for penetration testing. Experienced with the CWE top 25 and
 		OWASP top 10 vulnerabilities, a wide range of network and web application invasion tactics as well as various laws,
 		regulations, standards and security frameworks, diverse protocols, and executive report writing.
 	</p>
+
+	<h2>~$: cat certificates.txt</h2>
+	<ul class="list-inside list-disc">
+		<li>Item 1 <Link href="https://google.com">text</Link></li>
+		<li>Item 2 <Link href="/blog/">text</Link></li>
+	</ul>
 </PageLayout>
