--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import Path from '@components/Path.astro'
 ---
 
 <header class="relative">
-	<div class="relative z-20 flex justify-between border-b border-white bg-black p-4">
-		<button id="toggle-menu" class="transition-transform sm:pointer-events-none sm:rotate-0">></button>
+	<div class="relative z-20 flex justify-between border-b border-white bg-black pr-4">
+		<button id="toggle-menu" class="p-4 transition-transform sm:pointer-events-none sm:rotate-0">></button>
 		<Path />
 	</div>
 	<Menu
