--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,8 @@
 ---
+import { getCollection } from 'astro:content'
 import PageLayout from '@layouts/PageLayout.astro'
+
+const blogEntries = await getCollection('blog')
 ---
 
-<PageLayout title="blog">blog</PageLayout>
+<PageLayout title="blog" />
