--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -21,7 +21,23 @@ import PageLayout from '@layouts/PageLayout.astro'
 
 	<h2>~$: cat certificates.txt</h2>
 	<ul class="list-inside list-disc">
-		<li>Item 1 <Link href="https://google.com">text</Link></li>
-		<li>Item 2 <Link href="/blog/">text</Link></li>
+		<li>
+			EC-Council - Getting started with AWS pentesting <Link
+				href="https://codered.eccouncil.org/certificate/61cfc37d-b430-46a3-84da-b51f755dd678?logged=true"
+			>
+				ID: 239884
+			</Link> (August 2023)
+		</li>
+		<li>
+			EC- Council - Full Stack Attacks on Modern Web Applications <Link
+				href="https://codered.eccouncil.org/certificate/28df1500-f79e-4351-8a2e-94ead9879c37?logged=true"
+			>
+				ID: 196055
+			</Link>(January 2023)
+		</li>
+		<li>TOEFL ITP C1 (November 2021)</li>
+		<li>FreeCodeCamp, Kali Linux for ethical hackers (July 2021)</li>
+		<li>FreeCodeCamp, full ethical hacking course (April 2021)</li>
+		<li>HarvardX, CS50's introduction to artificial intelligence (December 2020)</li>
 	</ul>
 </PageLayout>
