--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,4 @@
-<footer class="border-y border-white p-4">footer</footer>
+<footer class="border-y border-white p-4">
+	"Within each personal computer is a miniature labyrinth - the enclave of partitions, hidden pathways that wind through
+	the transistors of the surface of a microprocessor"
+</footer>
