linked pgp keys

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,5 +16,10 @@ import PageLayout from '@layouts/PageLayout.astro'
 	<li>
 		<Link href="mailto:giu.mendes@protonmail.com">giu.mendes@protonmail.com</Link>
 	</li>
-	<p>For any sensitive info, please send me encrypted mails with PGP:</p>
+	<p>For any sensitive info, please send me encrypted mails:</p>
+	<li>
+		<a href="/syntologist.asc"
+			><u>My public PGP key</u> - this key's fingerprint is 8A34 3D60 C8CA CA58 71F7 7213 115C 7127 4C99 8447
+		</a>
+	</li>
 </PageLayout>
