--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,7 +1,7 @@
 <pre
 	role="heading"
 	aria-label="ASCII Syntologist"
-	class="text-[0.65rem] font-extrabold leading-none sm:text-lg/none">
+	class="text-[0.66rem] font-extrabold leading-none max-[350px]:text-[0.52rem] sm:text-lg/none">
    _____             __        __            _      __
   / ___/__  ______  / /_____  / /___  ____ _(_)____/ /_
   \__ \/ / / / __ \/ __/ __ \/ / __ \/ __ `/ / ___/ __/
