--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Path from '@components/Path.astro'
 ---
 
 <header class="relative">
-	<div class="relative z-20 flex justify-between border-b border-white bg-black pr-4">
+	<div class="relative z-20 flex justify-between border-y border-white bg-black pr-4">
 		<button id="toggle-menu" class="p-4 transition-transform sm:pointer-events-none sm:rotate-0">></button>
 		<Path />
 	</div>
