--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,14 +12,19 @@ import PageLayout from '@layouts/PageLayout.astro'
 			<Link href="https://www.linkedin.com/in/giulia-mendes-01a757227/">LinkedIn</Link>
 		</li>
 	</ul>
+
 	<p>Or feel free to reach out directly through:</p>
-	<li>
-		<Link href="mailto:giu.mendes@protonmail.com">giu.mendes@protonmail.com</Link>
-	</li>
+	<ul class="list-inside list-disc">
+		<li class="break-words">
+			<Link href="mailto:giu.mendes@protonmail.com">giu.mendes@protonmail.com</Link>
+		</li>
+	</ul>
+
 	<p>For any sensitive info, please send me encrypted mails:</p>
-	<li>
-		<a href="/syntologist.asc"
-			><u>My public PGP key</u> - this key's fingerprint is 8A34 3D60 C8CA CA58 71F7 7213 115C 7127 4C99 8447
-		</a>
-	</li>
+	<ul class="list-inside list-disc">
+		<li>
+			<a href="/syntologist.asc" class="underline">My public PGP key</a>
+			 - this key's fingerprint is 8A34 3D60 C8CA CA58 71F7 7213 115C 7127 4C99 8447
+		</li>
+	</ul>
 </PageLayout>
