--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -11,7 +11,7 @@ import PageLayout from '@layouts/PageLayout.astro'
 		My dad gave me a laptop running some Linux distro back in middle school, and ever since, I couldn't stop loving
 		computers.
 	</p>
-	<img src="/pic1.jpeg" alt="A picture of myself using the computer" class="my-4 border border-white" />
+	<img src="/images/pic1.jpeg" alt="A picture of myself using the computer" class="my-4 border border-white" />
 	<p>
 		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021,
 		experienced with Linux environments and Kali Linux for penetration testing. Experienced with the CWE top 25 and
