--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -38,7 +38,7 @@ import cybersecImage from '@assets/cybersec.jpeg'
 			EC- Council - Full Stack Attacks on Modern Web Applications
 			<Link href="https://codered.eccouncil.org/certificate/28df1500-f79e-4351-8a2e-94ead9879c37?logged=true">
 				ID: 196055
-			</Link>&nbsp;(January 2023)
+			</Link> (January 2023)
 		</li>
 		<li>TOEFL ITP C1 (November 2021)</li>
 		<li>FreeCodeCamp, Kali Linux for ethical hackers (July 2021)</li>
