--- a/src/components/BlogPost/BlogPostItem.astro
+++ b/src/components/BlogPost/BlogPostItem.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from 'astro:assets'
 import type { CollectionEntry } from 'astro:content'
 
 type Props = {
@@ -10,8 +9,6 @@ const { item } = Astro.props
 
 const href = `/blog/${item.slug}/`
 
-const image = await import(/* @vite-ignore */ item.data.image.src).then((image) => image.default)
-
 function readTime(text: string) {
 	const wpm = 225
 	const words = text.trim().split(/\s+/).length
@@ -20,22 +17,13 @@ function readTime(text: string) {
 ---
 
 <li>
-	<a href={href} class="flex px-4 py-6">
-		<div class="mr-4 flex flex-1 flex-col gap-2">
-			<h2 class="text-lg font-bold">{item.data.title}</h2>
-			<p>{item.data.description}</p>
-			<div class="mt-auto flex gap-2 text-sm">
-				<span>{item.data.publishDate.toLocaleDateString('en', { month: 'short', day: '2-digit' })}</span>
-				<span>·</span>
-				<span>{readTime(item.body)} min read</span>
-			</div>
+	<a href={href} class="flex flex-col px-4 py-6">
+		<h2 class="text-lg font-bold">{item.data.title}</h2>
+		<p>{item.data.description}</p>
+		<div class="mt-4 flex gap-2 text-sm">
+			<span>{item.data.publishDate.toLocaleDateString('en', { month: 'short', day: '2-digit', timeZone: 'UTC' })}</span>
+			<span>·</span>
+			<span>{readTime(item.body)} min read</span>
 		</div>
-		<Image
-			src={item.data.image}
-			alt={item.data.imageAlt}
-			width="200"
-			height="134"
-			class="h-[100px] w-[100px] self-center object-cover sm:w-[150px] md:h-[134px] md:w-[200px]"
-		/>
 	</a>
 </li>
