--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -18,7 +18,7 @@ const { entry } = Astro.props
 const { Content } = await entry.render()
 ---
 
-<PageLayout title={entry.data.title + ' - blog'} class="p-6">
+<PageLayout title={entry.data.title} description={entry.data.description} class="p-6">
 	<article class="prose prose-invert max-w-none prose-hr:border-white">
 		<Content />
 	</article>
