--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -19,10 +19,11 @@ import cybersecImage from '@assets/cybersec.jpeg'
 		class="my-4 border border-white"
 	/>
 	<p>
-		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021, and I've been working as a pentester at Spivit Global Technologies since 2023.
-		Experienced with Linux environments and Kali Linux for penetration testing. Experienced with the CWE top 25 and
-		OWASP top 10 vulnerabilities, a wide range of network and web application invasion tactics as well as various laws,
-		regulations, standards and security frameworks, diverse protocols, and executive report writing.
+		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021, and I've
+		been working as a pentester at Spivit Global Technologies since 2023. Experienced with Linux environments and Kali
+		Linux for penetration testing. Experienced with the CWE top 25 and OWASP top 10 vulnerabilities, a wide range of
+		network and web application invasion tactics as well as various laws, regulations, standards and security
+		frameworks, diverse protocols, and executive report writing.
 	</p>
 
 	<h2>~$: cat certificates.txt</h2>
