--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -7,6 +7,8 @@ const { class: className, ...props } = Astro.props
 ---
 
 <BaseLayout {...props} class="sm:px-4">
+	<slot name="head" slot="head"/>
+
 	<div class="container max-w-2xl border-x border-white">
 		<Header />
 		<main class:list={['p-4', className]}>
