--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -19,6 +19,8 @@ const { Content } = await entry.render()
 ---
 
 <PageLayout title={entry.data.title} description={entry.data.description} class="p-6">
+	<link slot="head" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
+
 	<article class="prose prose-invert max-w-none prose-hr:border-white">
 		<Content />
 	</article>
