--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -20,14 +20,19 @@ import cybersecImage from '@assets/cybersec.jpeg'
 	/>
 	<p>
 		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021, and I've
-		been working as a pentester at Spivit Global Technologies since 2023. Experienced with Linux environments and Kali
-		Linux for penetration testing. Experienced with the CWE top 25 and OWASP top 10 vulnerabilities, a wide range of
-		network and web application invasion tactics as well as various laws, regulations, standards and security
-		frameworks, diverse protocols, and executive report writing.
+		been working as a pentester leading the implementation of the offensive security and SaaS department at a medium
+		sized company in Brazil since November 2023. Experienced with Linux environments and Kali Linux for penetration
+		testing, CWE top 25 and OWASP top 10 vulnerabilities, a wide range of network and web application invasion tactics
+		as well as various laws, regulations, standards and security frameworks, diverse protocols, and executive report
+		writing.
 	</p>
 
 	<h2>~$: cat certificates.txt</h2>
 	<ul class="flex list-inside list-disc flex-col gap-2">
+		<li>
+			Santander - Cybersecurity bootcamp <Link href="https://www.dio.me/certificate/E312618A">ID: E312618A</Link>
+			 (November 2023)
+		</li>
 		<li>
 			EC-Council - Getting started with AWS pentesting <Link
 				href="https://codered.eccouncil.org/certificate/61cfc37d-b430-46a3-84da-b51f755dd678?logged=true"
