--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Banner from '@components/Banner.astro'
 import BaseLayout from '@layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="syntologist" class="sm:px-4">
+<BaseLayout title="syntologist" class="bg-black font-mono text-white sm:px-4">
 	<main class="container flex h-screen max-w-2xl flex-col items-center justify-center">
 		<Banner />
 		<p class="mt-6 text-center">Giulia Mendes - pentester | bug bounty hunter</p>
