--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, type CollectionEntry } from 'astro:content'
-import PageLayout from '@layouts/PageLayout.astro'
+import BlogPostLayout from '@layouts/BlogPostLayout.astro'
 
 type Props = {
 	entry: CollectionEntry<'blog'>
@@ -16,12 +16,9 @@ export async function getStaticPaths() {
 
 const { entry } = Astro.props
 const { Content } = await entry.render()
+const Layout = entry.data.layout ? Fragment : BlogPostLayout
 ---
 
-<PageLayout title={entry.data.title} description={entry.data.description} class="p-6">
-	<link slot="head" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
-
-	<article class="prose prose-invert max-w-none prose-hr:border-white [&_p:has(.katex)]:mx-auto [&_p:has(.katex)]:w-fit">
-		<Content />
-	</article>
-</PageLayout>
+<Layout {...entry.data}>
+	<Content />
+</Layout>
