changed some stuff

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,9 @@ import BaseLayout from '@layouts/BaseLayout.astro'
 <BaseLayout title="syntologist" class="bg-black font-mono text-white sm:px-4">
 	<main class="container flex h-screen max-w-2xl flex-col items-center justify-center">
 		<Banner />
-		<p class="mt-6 text-center">Giulia Mendes - pentester | bug bounty hunter</p>
+		<p class="mt-6 text-center">
+			They can see you in the light so you're never away from the danger, the only safe option is the death screen.
+		</p>
 		<Menu class="mt-8 self-stretch border-y sm:border-x" />
 	</main>
 </BaseLayout>
