changed whoami text

--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -19,36 +19,16 @@ import cybersecImage from '@assets/cybersec.jpeg'
 		class="my-4 border border-white"
 	/>
 	<p>
-		I'm a self-taught ethical hacker and bug bounty hunter on the Bugcrowd and HackerOne platforms since 2021, and I've
-		been working as a pentester leading the implementation of the offensive security and SaaS department at a medium
-		sized company in Brazil since November 2023. Experienced with Linux environments and Kali Linux for penetration
-		testing, CWE top 25 and OWASP top 10 vulnerabilities, a wide range of network and web application invasion tactics
-		as well as various laws, regulations, standards and security frameworks, diverse protocols, and executive report
-		writing.
+		My 2 biggest areas of interest are computers and cars. I once accidentally broke an old electronic device while
+		examining it inside and felt like I killed a man, since then I became fully dedicated to cyber security and ethical
+		hacking - participating in bug bounty programs, leading the implementation of the SaaS department at a Brazilian
+		company, working as a full time information security analyst, and a plethora of corporate yapping.
 	</p>
 
-	<h2>~$: cat certificates.txt</h2>
-	<ul class="flex list-inside list-disc flex-col gap-2">
-		<li>
-			Santander - Cybersecurity bootcamp <Link href="https://www.dio.me/certificate/E312618A">ID: E312618A</Link>
-			 (November 2023)
-		</li>
-		<li>
-			EC-Council - Getting started with AWS pentesting <Link
-				href="https://codered.eccouncil.org/certificate/61cfc37d-b430-46a3-84da-b51f755dd678?logged=true"
-			>
-				ID: 239884
-			</Link> (August 2023)
-		</li>
-		<li>
-			EC- Council - Full Stack Attacks on Modern Web Applications
-			<Link href="https://codered.eccouncil.org/certificate/28df1500-f79e-4351-8a2e-94ead9879c37?logged=true">
-				ID: 196055
-			</Link> (January 2023)
-		</li>
-		<li>TOEFL ITP C1 (November 2021)</li>
-		<li>FreeCodeCamp, Kali Linux for ethical hackers (July 2021)</li>
-		<li>FreeCodeCamp, full ethical hacking course (April 2021)</li>
-		<li>HarvardX, CS50's introduction to artificial intelligence (December 2020)</li>
-	</ul>
+	<p>
+		This website is meant to be an archive of my very own thoughts and stuff I don't have anyone to chat about. So feel
+		comfortable to wander around this corner of our vast cyberspace for as much time as we have before we're forever
+		lost to the thought of our sins, predeterminated by the silicon God, one of precision in protocols and indeterminacy
+		of result, the chaos God.
+	</p>
 </PageLayout>
