corrected grammar lol

--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -20,9 +20,9 @@ import cybersecImage from '@assets/cybersec.jpeg'
 	/>
 	<p>
 		My 2 biggest areas of interest are computers and cars. I once accidentally broke an old electronic device while
-		examining it inside and felt like I killed a man, since then I became fully dedicated to cyber security and ethical
-		hacking - participating in bug bounty programs, leading the implementation of the SaaS department at a Brazilian
-		company, working as a full time information security analyst, and a plethora of corporate yapping.
+		examining its insides and felt like I killed a man, since then I became fully dedicated to cyber security and
+		ethical hacking - participating in bug bounty programs, leading the implementation of the SaaS department at a
+		Brazilian company, working as a full time information security analyst, and a plethora of corporate yapping.
 	</p>
 
 	<p>
