new blog post + random corrections

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ import PageLayout from '@layouts/PageLayout.astro'
 	<p>Or feel free to reach out directly through:</p>
 	<ul class="list-inside list-disc">
 		<li class="break-words">
-			<Link href="mailto:giu.mendes@protonmail.com">giu.mendes@protonmail.com</Link>
+			<a>giu <b>DOT</b> mendes <b>AT</b> protonmail <b>DOT</b> com</a>
 		</li>
 	</ul>
 
