editted some stuff

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,7 +12,7 @@ import PageLayout from '@layouts/PageLayout.astro'
 			<Link href="https://www.linkedin.com/in/giulia-mendes-01a757227/">LinkedIn</Link>
 		</li>
 		<li>
-			<Link href="https://twitter.com/gihuchim">Twitter</Link>
+			<Link href="https://twitter.com/syn_tologist">Twitter</Link>
 		</li>
 	</ul>
 
